# atlas

./: .gitignore  AGENTS.md  Architechture.md  Cargo.toml  LICENSE  README.md  TODO.launcher-parallel-phases.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json  turbo.json  vite.config.ts
.agents/skills/atlas-context-sources/: SKILL.md
.agents/skills/next-styling/: SKILL.md
.agents/skills/vue-styling/: SKILL.md
.cargo/: config.toml
.github/workflows/: ci.yml  cli-installer-release.yml  cli-release.yml  launcher-nsis-release.yml  launcher-release.yml  runner-release.yml  tag-build.yml
.release-tools/: set-version.js
apps/cli/: Cargo.toml  package.json
apps/cli/src/: auth_store.rs  config.rs  io.rs  main.rs  version_catalog.rs
apps/cli/src/commands/: auth.rs  ci.rs  completion.rs  deploy.rs  init.rs  mod.rs  pack.rs  promote.rs  pull.rs  push.rs
apps/cli/src/commands/pack/: mod.rs  mrpack.rs
apps/cli/src/mods/: curseforge.rs  mod.rs  modrinth.rs
apps/launcher/: README.md  index.html  loading.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.release.json
apps/launcher/src-tauri/: Cargo.toml  tauri.conf.json
apps/launcher/src-tauri/capabilities/: default.json
apps/launcher/src-tauri/icons/: icon.icns
apps/launcher/src-tauri/src/: config.rs  library.rs  main.rs  paths.rs  state.rs  telemetry.rs
apps/launcher/src-tauri/src/auth/: atlas.rs  atlas_pending.rs  atlas_session.rs  error.rs  flow.rs  minecraft.rs  mod.rs  ms.rs  pending.rs  session.rs  tests.rs  xbox.rs
apps/launcher/src-tauri/src/commands/: auth.rs  diagnostics.rs  launcher.rs  library.rs  mod.rs  restart.rs  settings.rs
apps/launcher/src-tauri/src/diagnostics/: mod.rs  tests.rs
apps/launcher/src-tauri/src/launcher/: args.rs  download.rs  error.rs  java.rs  libraries.rs  manifest.rs  mod.rs  tests.rs  versions.rs
apps/launcher/src-tauri/src/launcher/loaders/: fabric.rs  neoforge.rs
apps/launcher/src-tauri/src/models/: auth.rs  diagnostics.rs  launch.rs  library.rs  mod.rs  settings.rs
apps/launcher/src-tauri/src/net/http/: client.rs  errors.rs  json.rs  mod.rs  retry.rs  text.rs
apps/runner/: Cargo.toml  atlas-runner.service
apps/runner-v2/: Cargo.toml
apps/runner-v2/src/: main.rs
apps/runner-v2/src/client/: backup.rs  mod.rs
apps/runner-v2/src/client/commands/: auth.rs  core.rs  mod.rs  rcon.rs  supervisor.rs
apps/runner/src/: backup.rs  java.rs  main.rs  runner_config.rs
apps/runner/src/assemble/: mod.rs
apps/runner/src/cache/: mod.rs
apps/runner/src/commands/: auth.rs  config.rs  down.rs  exec.rs  install.rs  launch.rs  logs.rs  mod.rs  restart.rs  status.rs  up.rs
apps/runner/src/fetch/: mod.rs
apps/runner/src/hub/: mod.rs  whitelist.rs
apps/runner/src/rcon/: mod.rs
apps/runner/src/reconcile/: mod.rs
apps/runner/src/supervisor/: mod.rs
apps/runnerd-v2/: Cargo.toml  build.rs
apps/runnerd-v2/src/: config.rs  lock.rs  main.rs
apps/runnerd-v2/src/backup/: mod.rs  ops.rs  rcon.rs  schedule.rs  scheduler.rs
apps/runnerd-v2/src/daemon/: mod.rs
apps/runnerd-v2/src/self_update/: mod.rs
apps/runnerd-v2/src/supervisor/: logs.rs  mod.rs  monitor.rs  rcon.rs  server.rs  state.rs  updates.rs  util.rs
apps/web/: .env.example  auth.ts  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  proxy.ts  tsconfig.tsbuildinfo
crates/atlas-auth/: Cargo.toml
crates/atlas-client/: Cargo.toml
crates/atlas-client/src/: device_code.rs  hub.rs  lib.rs  oauth.rs  sse.rs
crates/mod-resolver/: Cargo.toml
crates/mod-resolver/src/: curseforge.rs  curseforge_proxy.rs  lib.rs  modrinth.rs  pointer.rs
crates/protocol/: Cargo.toml  build.rs
crates/runner-core-v2/: Cargo.toml
crates/runner-ipc-v2/: Cargo.toml
crates/runner-ipc-v2/src/: framing.rs  lib.rs  socket.rs
crates/runner-provision-v2/: Cargo.toml
crates/runner-provision-v2/src/: errors.rs  hashing.rs  java.rs  lib.rs
crates/runner-provision-v2/src/apply/: eula.rs  loader.rs  marker.rs  mod.rs  plan.rs  pointers.rs  preserve.rs  server_properties.rs  staging.rs
crates/runner-provision-v2/src/launch/: mod.rs  plan.rs
crates/runner-v2-rcon/: Cargo.toml
crates/runner-v2-utils/: Cargo.toml
docs/: runner-arch.md
docs/dev/: README.md  atlas-client-developer-guide.md  atlas-executive-summary.md  atlas-launcher-developer-guide.md  atlas-runner-api-reference.md  atlas-runner-cli-developer-guide.md  atlas-runner-crates-documentation.md  atlas-runner-daemon-developer-guide.md  atlas-runner-data-formats.md  atlas-runner-main-architecture.md  atlas-runner-technical-documentation.md  atlas-system-architecture.md  atlas-web-api-reference.md  mod-resolver-developer-guide.md  protocol-developer-guide.md  runner-core-v2-developer-guide.md  runner-ipc-v2-developer-guide.md  runner-provision-v2-developer-guide.md
docs/user/: README.md  atlas-end-user-stories.md  atlas-launcher-user-guide.md  atlas-runner-user-guide.md  navigation.json  runner-install.md  testing-dev-builds-with-atlas-runner.md  user-stories.md
scripts/: linux-build.sh
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  config.rs  launcher.rs  main.rs  models.rs  paths.rs  state.rs
src-tauri/src/auth/: error.rs  flow.rs  http.rs  minecraft.rs  mod.rs  ms.rs  pending.rs  session.rs  tests.rs  xbox.rs
src-tauri/src/commands/: auth.rs  library.rs  settings.rs
src-tauri/src/launcher/: args.rs  download.rs  java.rs  libraries.rs  manifest.rs  mod.rs  tests.rs
src-tauri/src/launcher/loaders/: fabric.rs  mod.rs  neoforge.rs
src-tauri/src/models/: launch.rs  library.rs  mod.rs  settings.rs
src-tauri/src/net/http/: text.rs
src-tauri/src/settings/: mod.rs
src/assets/: main.css
src/components/: AccountCard.vue  ActivityCard.vue  InstancesCard.vue  ModsCard.vue  PlayCard.vue  SettingsCard.vue  SidebarNav.vue  VersionsCard.vue
src/lib/: useAuth.ts  useLaunchEvents.ts  useLauncher.ts  useLibrary.ts  useSettings.ts  useStatus.ts  useWorking.ts
src/types/: auth.ts  launch.ts  library.ts  settings.ts
(+373 files in other folders)
