[workspace]
resolver = "2"
members = [
  "apps/cli",
  "apps/launcher/src-tauri",
  "apps/runner",
  "apps/runner-v2",
  "apps/runnerd-v2",
  "crates/atlas-client",
  "crates/mod-resolver",
  "crates/protocol",
  "crates/runner-core-v2",
  "crates/runner-ipc-v2",
  "crates/runner-provision-v2",
  "crates/runner-v2-utils",
  "crates/runner-v2-rcon"
]
