[package]
name = "mc-launcher"
version = "0.1.0"
description = "Barebones Minecraft launcher"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "path-all", "fs-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1.36", features = ["time", "rt-multi-thread", "macros", "net", "io-util"] }
sha1 = "0.10"
hex = "0.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
dirs = "5"
thiserror = "1"
futures = "0.3"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
url = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
