[package]
name = "atlas-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "atlas"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
protocol = { path = "../../crates/protocol" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
walkdir = "2.5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
url = "2.5"
