[package]
name = "atlas-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "atlas"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
atlas-auth = { path = "../../crates/atlas-auth" }
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
dirs = "6"
mod-resolver = { path = "../../crates/mod-resolver", features = ["blocking"] }
protocol = { path = "../../crates/protocol" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
walkdir = "2.5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
