[package]
name = "runner-v2"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "runner2"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "process"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

runner-core-v2 = { path = "../../crates/runner-core-v2" }
runner-ipc-v2  = { path = "../../crates/runner-ipc-v2" }
runner-v2-utils = { path = "../../crates/runner-v2-utils" }

[[bin]]
name = "atlas-runner"
path = "src/main.rs"