[package]
name = "atlas-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", features = ["json", "rustls", "stream"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
zstd = "0.13"
prost = "0.13"
toml = "0.8"
futures = "0.3"
sha2 = "0.10"
rand = "0.8"
libc = "0.2"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
flate2 = "1.0"
tar = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Atlas Crates
protocol = { path = "../../crates/protocol" }
mod-resolver = { path = "../../crates/mod-resolver" }
atlas-auth = { path = "../../crates/atlas-auth" }

[[bin]]
name = "atlas-runner"
path = "src/main.rs"

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-unknown-linux-gnu-gcc"
