[package]
name = "runnerd-v2"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "signal", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"
serde_json = "1"
fs2 = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

runner-core-v2 = { path = "../../crates/runner-core-v2" }
runner-ipc-v2  = { path = "../../crates/runner-ipc-v2" }
runner-v2-utils   = { path = "../../crates/runner-v2-utils" }


[[bin]]
name = "atlas-runnerd"
path = "src/main.rs"