[package]
name = "runnerd-v2"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "signal", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"
serde_json = "1"
fs2 = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
async-trait = "0.1.89"
reqwest = "0.12.12"
dirs = "5"
serde = { version = "1", features = ["derive"] }
sysinfo = "0.33"
atlas-client = { path = "../../crates/atlas-client" }
runner-v2-rcon = { path = "../../crates/runner-v2-rcon" }

runner-core-v2 = { path = "../../crates/runner-core-v2" }
runner-ipc-v2  = { path = "../../crates/runner-ipc-v2" }
runner-v2-utils   = { path = "../../crates/runner-v2-utils" }
runner-provision-v2 = { path = "../../crates/runner-provision-v2" }
protocol = { path = "../../crates/protocol" }


[[bin]]
name = "atlas-runnerd"
path = "src/main.rs"