[package]
name = "atlas-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
rand = "0.8"
reqwest = { version = "0.12.12", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
url = "2"
