[package]
name = "mod-resolver"
version = "0.1.0"
edition = "2024"

[features]
blocking = ["dep:tokio"]

[dependencies]
anyhow = "1.0"
protocol = { path = "../protocol" }
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.36", features = ["rt-multi-thread"], optional = true }
url = "2.5"
