[package]
name = "runner-ipc-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["net", "io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = { version = "0.3", features = ["sink"] }
serde_json = "1"

runner-core-v2 = { path = "../runner-core-v2" }
