[package]
name = "runner-provision-v2"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"

protocol = { path = "../protocol" }
mod-resolver = { path = "../mod-resolver" }
tokio = { version = "1.49.0", features = ["full", "io-std"] }
futures-util = { version = "0.3", features = ["sink"] }
sha1 = "0.11.0-rc.5"
hex = "0.4.3"
sha2 = "0.11.0-rc.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "1.0.69"
toml = "0.8.2"
prost = "0.13.5"
reqwest = { version = "0.12.12", features = ["json"] }

