[package]
name = "atlas"
version = "0.1.0"
description = "Atlas Launcher"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
atlas-client = { path = "../../../crates/atlas-client" }
mod-resolver = { path = "../../../crates/mod-resolver" }
protocol = { path = "../../../crates/protocol" }
tauri = { version = "2.10.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13.1", features = ["form", "json", "stream", "rustls"] }
tokio = { version = "1.36", features = ["time", "rt-multi-thread", "macros", "net", "io-util"] }
sha1 = "0.10"
hex = "0.4"
zip = { version = "8.0.0", default-features = false, features = ["deflate"] }
dirs = "6"
thiserror = "2.0.18"
futures = "0.3"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
url = "2"
async-trait = "0.1"
quick-xml = "0.38"
sysinfo = "0.33"
tauri-plugin-deep-link = "^2.0.0"
tauri-plugin-opener = "^2.0.0"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-prevent-default = "4"

[features]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
